--- a/fresa.org
+++ b/fresa.org
@@ -55,7 +55,7 @@ The objective function, =f(x)=, returns two variables: =z=, the vector of object
 #+begin_src julia
   module Fresa
   export solve
-  version = "2017.09.05 17:57:59"
+  version = "2017.09.05 18:11:01"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -130,6 +130,7 @@ This function uses a helper function, defined below, to assign a fitness to a ve
           # println("VF: v=$v")
           # println("  : of size $(size(v))")
           if m == 1                   # single objective 
+              v = [v[i][1] for i=1:l]
               s = sortperm(v)
               zmin = v[s[1]]
               zmax = v[s[l]]
@@ -268,9 +269,8 @@ The function expects the objective function, ~f~, an initial guess, ~x0~, and lo
           print(": $gen best is $(best.z)           \r")
           if gen%output == 0
               @printf("| %9d | %9.2f | ", gen, time()-tstart)
-              j = nz>1 ? nx+1 : 1
-              for i = 1:length(best[i].z)
-                  @printf("%9g |", best[i].z[j])
+              for i = 1:length(best.z)
+                  @printf("%9g |", best.z[i])
               end
               println()
           end
@@ -298,7 +298,7 @@ The function expects the objective function, ~f~, an initial guess, ~x0~, and lo
       index = sortperm(fit)
       if nz == 1
           best = pop[index[end]]
-          return best.x, best.z, pop
+          return best.x, best.z, best.g, pop
       else
           return pareto(pop), pop
       end
@@ -477,7 +477,7 @@ This test uses a simple quadratic objective function, defined within.  All point
   x0 = 0.5*ones(nx)
   a = zeros(nx)
   b = 10*ones(nx)
-  f = x -> ((x[1]-3)^2+(x[2]-5)^2+8, 0)
+  f = x -> ([(x[1]-3)^2+(x[2]-5)^2+8], 0)
   bestx, bestz, bestg, pop = Fresa.solve(f, x0, a, b)
   println("Population at end: $pop")
   println("Best solution is f($bestx)=$bestz with g=$bestg")
