--- a/fresa.org
+++ b/fresa.org
@@ -24,8 +24,6 @@ All code (either version) is copyright © {{{time(%Y)}}}, Eric S Fraga, all righ
 
 Please let [[mailto:e.fraga@ucl.ac.uk?subject=The%20Strawberry%20code][the author know]] if you download the code.  Further, if either /Fresa/ or /Strawberry/ codes are used and this use leads to publications of any type, please do cite the publications listed in the first paragraph of the documentation for [[file:strawberry.org][Strawberry]].  Feedback, including bug reports, is most welcome.
 
-In the following code, we assume column vectors for decision variables and objectives.  The convention on constraint violation is 1 meaning yes, i.e. infeasible solution, and 0 means no violation of the constraints.
-
 ** Upload to web site                                        :noexport:
 #+name: upload
 #+begin_src shell :results none :exports none :eval never-export
@@ -57,7 +55,7 @@ The objective function, =f(x)=, returns two variables: =z=, the vector of object
 #+begin_src julia
   module Fresa
   export solve
-  version = "2017.09.05 18:23:06"
+  version = "2017.09.06 09:16:51"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -72,7 +70,13 @@ Fresa uses one type, =Point=, which is a point in the search space.  It includes
       g :: Float64                # constraint violation
       function Point(x, f)
           (z, g) = f(x)
-          new(x,z,g)
+          if typeof(z) == Array{Float64}
+              new(x,z,g)
+          elseif typeof(z) == Float64
+              new(x,[z],g)
+          else
+              println("Objective function values should be Float64 values, not $(typeof(z))")
+          end
       end
   end
 #+end_src 
@@ -254,6 +258,10 @@ Used to set some of the module global variables used by many of the functions in
 The function expects the objective function, ~f~, an initial guess, ~x0~, and lower, ~a~, and upper, ~b~, bounds.  It returns the optimum, the objective function value(s) at this point, the constraint at that point and the whole population at the end.  The actual return values and data structures depends on the number of criteria:
 - 1 :: returns best point, the objective function value, the constraint value and the full population;
 - >1 :: returns the set of non-dominated points (as an array including objective function values and constraint value) and the full population.
+     
+The objective function, =f=, should return two results: =z=, the objective vn value(s) which must be of type =Float64=, single or array, and =g=, the constraint violation.  If =g≤0=, the point is feasible; any value =g>0= means an infeasible point.  The value of =g= for infeasible points will be used to rank the fitness of the infeasible solution, with lower values being fitter.
+
+=x0= is the initial guess and can be of any type.  =a= and =b= are lower and upper bounds and should be of types consistent with each other and =x0=.  Note that the =neighbourfn= must be specified if the decision points are not arrays of =Float64= or if a different definition of neighbouring points is desired.  The calling sequence for =neighbourfn= is =(x,a,b,fitness)= for some =x=.
 #+name: solve
 #+begin_src julia
   function solve(f, x0, a, b;     # required arguments
@@ -486,7 +494,7 @@ This test uses a simple quadratic objective function, defined within.  All point
   x0 = 0.5*ones(nx)
   a = zeros(nx)
   b = 10*ones(nx)
-  f = x -> ([(x[1]-3)^2+(x[2]-5)^2+8], 0)
+  f = x -> ((x[1]-3)^2+(x[2]-5)^2+8, 0)
   bestx, bestz, bestg, pop = Fresa.solve(f, x0, a, b)
   println("Population at end: $pop")
   println("Best solution is f($bestx)=$bestz with g=$bestg")
