--- a/fresa.org
+++ b/fresa.org
@@ -57,7 +57,7 @@ The /Fresa/ method is a population based evolutionary algorithm which mimics the
 #+begin_src julia
   module Fresa
   export solve
-  version = "2017.09.06 18:06:12"
+  version = "2017.09.07 08:50:08"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -276,15 +276,21 @@ The objective function, =f=, should return two results: =z=, the objective funct
 #+name: solve
 #+begin_src julia
   function solve(f, x0, a, b;     # required arguments
-                 ngen = 100, npop = 10, output = 5, nrmax = 5, ns = 100,
-                 neighbourfn = neighbour)
+                 elite = true,    # elitism by default
+                 neighbourfn = neighbour, # neighbour function to use
+                 ngen = 100,      # number of generations
+                 npop = 10,       # population size
+                 nrmax = 5,       # number of runners maximum
+                 ns = 100,        # number of stable solutions for stopping
+                 output = 5)      # how often to output information
       tstart = time()
       p0 = Point(x0,f)            # initial point
       nf = 1                      # number of function evaluations
       nz = length(p0.z)           # number of criteria
       pop = [p0];                 # create/initialise the population object
       println(": initial population, $pop")
-      @printf("| %9s | %9s | %9s | %9s |", "gen", "npop", "nf", "t (s)")
+      @printf("| %9s | %9s | %9s | %9s |", "gen", "npop",
+              elite ? "np" : "nf", "t (s)")
       for i in 1:nz
           @printf(" z%-8d |", i)
       end
@@ -293,15 +299,25 @@ The objective function, =f=, should return two results: =z=, the objective funct
           fit = fitness(pop)
           index = sortperm(fit)
           best = pop[index[end]]
-          print(": $gen best is $(best.z)           \r")
+          # if elitism is used
+          if elite
+              if nz > 1
+                  newpop = pareto(pop)
+              else
+                  newpop = [best]
+              end
+          else
+              newpop = Array{Float64,1}
+          end
+          print(": $gen np=$(length(newpop)) with most fit z=$(best.z)           \r")
           if gen%output == 0
-              @printf("| %9d | %9d | %9d | %9.2f |", gen, length(fit), nf, time()-tstart)
+              @printf("| %9d | %9d | %9d | %9.2f |", gen, length(fit),
+                      elite ? length(newpop) : nf, time()-tstart)
               for i = 1:length(best.z)
                   @printf(" %9g |", best.z[i])
               end
               println()
           end
-          newpop = [best]
           l = length(pop)
           for i in 1:min(l,npop)
               s = select(fit)
